# nodus-adk-runtime

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  README_A2A_CONFIG.md  pyproject.toml
config/: a2a_agents.json
docs/: A2A_HITL_GUIDE.md
scripts/: create_workspace_prompts.py  dev.sh  update_pa_prompt.py
src/nodus_adk_runtime/: __init__.py  config.py  langfuse_tracer.py  observability.py  server.py
src/nodus_adk_runtime/adapters/: __init__.py  database_memory_service.py  dual_write_memory_service.py  mcp_adapter.py  memory_adapter.py  nodus_mcp_toolset.py  qdrant_memory_service.py
src/nodus_adk_runtime/api/: __init__.py  assistant.py  hitl.py  recording.py  schemas.py
src/nodus_adk_runtime/config/: a2a_agents.json
src/nodus_adk_runtime/middleware/: __init__.py  auth.py  logging.py
src/nodus_adk_runtime/prompts/: memory_instructions.py
src/nodus_adk_runtime/services/: hitl_service.py  prompt_service.py
src/nodus_adk_runtime/tools/: __init__.py  a2a_dynamic_tool_builder.py  a2a_tool.py  current_datetime_tool.py  generic_hitl_tool.py  query_knowledge_tool.py  query_memory_tool.py  query_pages_tool.py  workspace_task_tool.py
src/nodus_adk_runtime/tools/workspace/: __init__.py  context_builder.py  executor.py  memory_saver.py  planner.py
tests/: README_TESTS.md  demo_add_new_agent.py  manual_test_a2a_config.py  simple_a2a_config_test.py  test_a2a_dynamic_tools.py  test_hitl_resumability.py  test_root_agent_integration.py
