[project]
name = "nodus-adk-runtime"
version = "0.1.0"
description = "Nodus ADK Runtime - Integration layer for Google ADK with Nodus OS"
authors = [
    { name = "Nodus Factory", email = "dev@nodus-factory.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk @ git+https://github.com/nodus-factory/adk-python.git@nodus-main",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",  # Required for DatabaseSessionService
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

